rename getCopy() -> copy() for DataSet and TimeSeries

--- a/Tests_Artifacts/simpleWaveforms_paulStretch.ipynb
+++ b/Tests_Artifacts/simpleWaveforms_paulStretch.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "source": [
     "## Basic behaviour\n",
-    "Significant broadening of peak, preservation of central frequency."
+    "Significant broadening of spectral peak, preservation of central frequency."
    ]
   },
   {
